--- a/app/views/events/_item_fields.html.slim
+++ b/app/views/events/_item_fields.html.slim
@@ -1,11 +1,13 @@
-.nested-fields.form-group.row.required
-  .col-xs-2.text-right
-  span.field.col-xs-4
-    = f.label :name, 'Enter item name'
-    = f.text_field :name
-  span.field.col-xs-4
-    = f.label :amount, 'How many?'
-    = f.text_field :amount, class: 'form-control'
-  span.field.col-xs-2
-    div &nbsp
-    / = link_to_remove_association 'Remove Things', f, class: 'btn btn-danger btn-primary thing-remove-btn'
+.row.nested-fields.form-group.required
+  div.col-sm-12.col-sm-offset-2
+    span.field.col-sm-4
+      = f.label :name, 'Item name'
+      = f.text_field :name, class: 'form-control'
+
+    span.field.col-sm-4
+      = f.label :amount, 'How many?'
+      = f.text_field :amount, class: 'form-control'
+
+
+      /span.field.col-xs-2
+        / = link_to_remove  _association 'Remove Things', f, class: 'btn btn-danger btn-primary thing-remove-btn'
