--- a/app/views/events/need_poeple_or_things.html.slim
+++ b/app/views/events/need_poeple_or_things.html.slim
@@ -1,5 +1,19 @@
-= link_to 'I need people',  event_need_persons_path(@event, to: 'first_form')
+div.row
+  .col-sm-6.col-sm-offset-3
+    div.row
+      h3.text-center Need people (volunteers) or Need things?
+
+    div.row
+      .col-sm-4
+        = link_to 'I need people', event_need_items_path(@event, to: 'first_form'), class: 'btn btn-primary btn-lg'
+      .col-sm-4
+      .col-sm-4
+        = link_to 'I need things',  event_need_things_path(@event, to: 'first_form'), class: 'btn btn-primary btn-lg'
+
 br
-= link_to 'I need things',  event_need_things_path(@event, to: 'first_form')
-br
-= link_to 'Go Back',  event_time_form_path(@event)
+hr
+div.row
+  div.col-sm-12
+    div.col-sm-4.col-sm-offset-4
+      = link_to '<', event_time_form_path(@event), class: 'button btn btn-default btn-lg button-round'
+      | &nbsp;&nbsp; Go Back
