--- a/app/views/events/need_things.html.slim
+++ b/app/views/events/need_things.html.slim
@@ -1,12 +1,24 @@
-= form_for(@event, url: event_path(@event, from: 'need_things'),
-        html: {method: :patch}) do |f|
-  #event_properties
-    = f.fields_for :things do |prop|
-      = render partial: 'events/thing_fields', locals: { f: prop }
-    .links
-      .col-xs-10.col-xs-offset-2
-        = link_to_add_association 'Add Things', f, :things, class: 'btn btn-success btn-xs'
-  .form-group.row
-    .col-xs-10.col-xs-offset-2
-      = f.submit 'Submit', class: 'btn btn-primary'
-= link_to 'Go Back', event_need_poeple_or_things_path(event_id: @event)
+div.row
+  = form_for(@event, url: event_path(@event, from: 'need_things'),
+          html: {method: :patch}) do |f|
+    #event_properties
+      = f.fields_for :things do |prop|
+        = render partial: 'events/thing_fields', locals: {f: prop}
+      .links
+        .col-xs-10.col-xs-offset-2
+          = link_to_add_association 'Add Things', f, :things, class: 'btn btn-success btn-xs'
+
+hr
+div.col-sm-12
+  div.row
+    div.col-sm-4.col-sm-offset-2
+      = link_to '<', event_need_poeple_or_things_path(event_id: @event),
+              class: 'button btn btn-default btn-lg button-round'
+      | &nbsp;&nbsp; Go Back
+
+    div.col-sm-4
+      div[style='float:right']
+        | Save and Continue &nbsp;&nbsp;
+        button.btn.btn-default.btn-lg.button-round.btn-save-and-cont >
+
+    div.col-sm-2
