--- a/app/views/events/new.html.slim
+++ b/app/views/events/new.html.slim
@@ -1,30 +1,38 @@
-.row
-  .col-md-12
-    h2.text-center.mb-5
-    .row
-      .col-md-6.mx-auto
-        .card
-          .card-header
-            h3.mb-0.my-2 My Profile
-          .card-body
-            / = errors_for(@event)
-            = form_for(@event, url: events_path(from: 'first_form'),
-              html: { method: :post, class: 'form' }) do |f|
-              .form-group
-                = f.label 'Signup Title'
-                = f.text_field :title, class: 'form-control'
-              .form-group
-                = f.label 'Type of Event'
-                = f.text_field :category, class: 'form-control'
-              .form-group
-                = f.label 'Welcome message/Ask'
-                = f.text_area :welcome_message, class: 'form-control'
-              .form-group
-                = f.label 'Attach a File'
-                = f.file_field :file, class: 'form-control'
-              .form-group
-                = f.label 'Feature Image'
-                = f.file_field :image, class: 'form-control'
+div.row
+  .col-sm-6.col-sm-offset-3
+    .card
+      .card-header
+        h3.mb-0.my-2
+      .card-body
+        / = errors_for(@event)
+        = form_for(@event, url: events_path(from: 'first_form'),
+                html: {method: :pokst, class: 'form'}) do |f|
+          .form-group
+            = f.label 'Signup Title'
+            = f.text_field :title, class: 'form-control'
+          .form-group
+            = f.label 'Type of Event'
+            = f.text_field :category, class: 'form-control'
+          .form-group
+            = f.label 'Welcome message/Ask'
+            = f.text_area :welcome_message, class: 'form-control'
+          .form-group
+            = f.label 'Attach a File'
+            = f.file_field :file, class: 'form-control'
+          .form-group
+            = f.label 'Feature Image'
+            = f.file_field :image, class: 'form-control'
 
-              .form-group
-                button.btn.btn-success.float-right type='submit' Update
+hr
+div.col-sm-12
+  div.row
+    div.col-sm-4.col-sm-offset-2
+      button.btn.btn-default.btn-lg.button-round <
+      | &nbsp;&nbsp; Go Back
+
+    div.col-sm-4
+      div[style='float:right']
+        | Save and Continue &nbsp;&nbsp;
+        button.btn.btn-default.btn-lg.button-round.btn-save-and-cont >
+
+    div.col-sm-2
