--- a/app/views/events/preview_and_publish.html.slim
+++ b/app/views/events/preview_and_publish.html.slim
@@ -1,1 +1,12 @@
-= link_to 'Go Back', event_need_items_path (@event)
+div.row
+  .col-sm-6.col-sm-offset-3
+    div.row
+      h3.text-center = ' '
+  div.row
+    .col-sm-4
+      = link_to '<', event_need_items_path(@event), class: 'button btn btn-default btn-lg button-round'
+      | &nbsp;&nbsp; Go Back
+    .col-sm-4
+    .col-sm-4
+      = link_to 'Preview and Publish', event_need_items_path(@event),
+                class: 'btn btn-primary btn-lg'
