take preview and publish to root path

--- a/app/views/events/preview_and_publish.html.slim
+++ b/app/views/events/preview_and_publish.html.slim
@@ -8,5 +8,5 @@ div.row
       | &nbsp;&nbsp; Go Back
     .col-sm-4
     .col-sm-4
-      = link_to 'Preview and Publish', event_need_items_path(@event),
+      = link_to 'Preview and Publish', root_path,
                 class: 'btn btn-primary btn-lg'
